# Rustique

./: Cargo.toml  README.md  changelog.md  clippy.toml
.cargo/: config.toml
.github/workflows/: rustique-workflow.yml
cli/: Cargo.toml  changelog.md
cli/src/: cli_commands.rs  commands.rs  logging.rs  main.rs  modpack.rs  updater.rs
cli/src/commands/: arg_structs.rs  config.rs  config_table.rs  delete.rs  download.rs  info.rs  install.rs  list.rs  search.rs  sync.rs  update.rs
cli/src/commands/arg_structs/: changelog_args.rs  config_args.rs  config_table_args.rs  delete_args.rs  download_args.rs  info_args.rs  list_args.rs  search_args.rs  sync_args.rs  update_args.rs  updater_args.rs
cli/src/modpack/: modpack_commands.rs  mp_create.rs  mp_delete.rs  mp_disable.rs  mp_enable.rs  mp_install.rs  mp_update.rs
cli/src/updater/: github_api_args.rs  self_update.rs  update_manager.rs
core/: Cargo.toml
core/src/: api.rs  config.rs  consts.rs  information_utils.rs  install_manager.rs  lib.rs  rustique_errors.rs  rustique_options.rs  search.rs  symlink_manager.rs  sync_structs.rs  traits.rs  utils.rs  version_management.rs
core/src/api/: api_structs.rs  client.rs  download.rs
core/src/config/: config.toml  config_manager.rs  config_structs.rs
core/src/traits/: option_ext.rs  ref_ext.rs  search_traits.rs  vec_ext.rs
gui/: Cargo.toml
rustique-cli/: Cargo.toml
rustique-cli/src/: cli_commands.rs  logging.rs  main.rs  rustique-autoclose.desktop  rustique-silent.desktop  rustique.desktop
rustique-cli/src/commands/: config.rs  info.rs  install.rs  list.rs  sync.rs  update.rs
rustique-cli/src/commands/arg_structs/: config_args.rs
rustique-cli/src/modpack/: mp_install.rs
rustique-cli/src/updater/: update_manager.rs
rustique-core/: Cargo.toml
rustique-core/src/: information_utils.rs  install_manager.rs  sync_structs.rs  utils.rs  version_management.rs
rustique-core/src/api/: api_structs.rs  client.rs  download.rs
rustique-core/src/config/: config_manager.rs  flatten_map.rs
src/: aliases.rs  api.rs  api_structs.rs  changelog.md  cli_commands.rs  commands.rs  config.toml  config_manager.rs  config_structs.rs  consts.rs  flatten_map.rs  information_utils.rs  install.rs  install_manager.rs  list.rs  logging.rs  main.rs  modpack.rs  rustique.desktop  rustique_errors.rs  rustique_options.rs  sync.rs  update.rs  updater.rs  utils.rs  version_management.rs
src/api/: api_structs.rs  client.rs  download.rs
src/commands/: arg_structs.rs  bulk_downloader.rs  config.rs  config_table.rs  download.rs  info.rs  install.rs  list.rs  search.rs  sync.rs  update.rs
src/commands/arg_structs/: config_args.rs  config_table_args.rs  info_args.rs  install_args.rs  list_args.rs  modpack_args.rs  search_args.rs  sync_args.rs
src/config/: config.rs  config_manager.rs  config_structs.rs  config_table.rs  flatten_map.rs
src/modpack/: modpack_commands.rs  modpack_toml.rs  modpack_zip.rs  mp_create.rs  mp_disable.rs  mp_enable.rs  mp_install.rs  mp_update.rs  symlink_manager.rs
src/traits/: option_ext.rs  ref_ext.rs  search_traits.rs  string_ext.rs  vec_ext.rs
src/updater/: github_api_args.rs  self_update.rs  update_manager.rs  windows_updater.bat
