[package]
name = "Rustique"
version = "0.4.0"
edition = "2024"
authors = ["tekunogosu", "Violet4"]

[features]
debug = []
dev = []

[dependencies]
clap = { version = "4.5.37", features = ["color", "suggestions", "derive"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = { version = "6.0.0" }
serde_json5 = {  version = "0.2.1" }
chrono = { version =  "0.4.40" }
comfy-table = "7.1.4"
url = "2.5.4"
lenient_semver = "0.4.2"
semver = "1.0.26"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.44.2", features = ["fs", "rt-multi-thread", "macros"] }
clap_complete = "4.5.50"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
indexmap = { version = "2.9.0", features = ["rayon", "serde"] }
html2text = "0.15.0"
indicatif = { version = "0.17.11", features = ["rayon", "tokio"] }
zip = "3.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
panic = "abort"
strip = "symbols"
