[workspace]
members = [
    "rustique-cli",
    "rustique-core",
]
resolver = "2"


[workspace.dependencies]
clap = { version = "4.5.48", features = ["color", "suggestions", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = { version = "6.0.0" }
serde_json5 = {  version = "0.2.1" }
chrono = { version =  "0.4.42" }
comfy-table = "7.2.1"
url = "2.5.7"
lenient_semver = "0.4.2"
semver = "1.0.27"
toml = { version = "1.1.2+spec-1.1.0", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["json"], default-features = false }
tokio = { version = "1.47.1", features = ["fs","rt-multi-thread", "macros", "io-util"] }
clap_complete = "4.5.58"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
indexmap = { version = "2.11.4", features = ["serde"] }
html2text = "0.17.1"
indicatif = { version = "0.18.0", features = ["tokio"] }
async_zip = { version = "0.0.18", features = ["tokio", "tokio-fs", "deflate"] }
futures = "0.3.31"
num_cpus = "1.17.0"
uuid = { version = "1.18.1", features = ["v4"] }
csv = "1.3.1"
is_elevated = "0.1.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
panic = "abort"
strip = "symbols"
